src/css/styles.css
/* Tailwind Core */
@import 'tailwindcss';

/* ReUI Configs */
@import './config.reui.css';

/** Global Styles **/
@layer base {
  * {
    @apply border-border;
  }

  *:focus-visible {
    @apply outline-ring rounded-xs shadow-none outline-2 outline-offset-3 transition-none!;
  }
}

/* Metronic Components  */
@import './components/image-input.css';
@import './components/apexcharts.css';
@import './components/leaflet.css';
@import './components/rating.css';
@import './components/image-input.css';
@import './components/scrollable.css';

/* Demos */
@import './demos/demo1.css';

/** Dark/Light Theme Variant **/
@custom-variant dark (&:is(.dark *));
@custom-variant light (&:not(.dark *));

/** Calendrier Régulation - Pastille Lendemain (Bleu) **/
.rdp-tomorrow > button::after {
  content: '';
  pointer-events: none;
  position: absolute;
  bottom: 4px;
  left: 50%;
  transform: translateX(-50%);
  width: 5px;
  height: 5px;
  border-radius: 9999px;
  background-color: #3b82f6; /* blue-500 */
  transition: background-color 0.2s;
}

